<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/factura"
    tools:context="com.athome.Facturacion.Factura">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/md_yellow_600"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/barraPrecio"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/md_black_1000" />

    <!-- Card Eleccion -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_yellow_50">

            <!--Etiqueta Tipo de Plato -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Eleccion"
                android:textColor="@color/md_red_800"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <!--Texto de ejemplo-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/Facturacion_plato" />

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <!-- Card Eleccion -->
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="190dp">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="220dp">

            <!--Etiqueta Tipo de Plato -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facturacion_fecha"
                android:textSize="17dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <!--Etiqueta Tipo de Plato -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facturacion_hora"
                android:textSize="17dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <!--Etiqueta Tipo de Plato -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tiempo_estimado"
                android:textSize="17dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <!--Etiqueta Tipo de Plato -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lugar_entrega"
                android:textSize="17dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <!--Etiqueta Tipo de Plato -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Numero_pedido"
                android:textSize="17dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <!--Texto de ejemplo-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/Facturacion_recomendacion" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>
