<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.athome.Publicar.CargarDatos2"
    tools:showIn="@layout/cargar_datos"
    android:background="@drawable/splash_screen4">


    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_between"
        android:paddingTop="5dp"
        android:text="@string/info_des_text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/md_black_1000"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/padding_between"
        android:layout_marginTop="2dp"
        android:background="@color/md_brown_500"
        android:layout_below="@+id/info_text" />

    <EditText
        android:id="@+id/tutulo_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/desNombrePlato"
        android:inputType="textPersonName"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/divider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/resumen_input"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/DesResumenPlato"
        android:layout_marginTop="10dp"
        android:inputType="textLongMessage"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/tutulo_input"
        android:layout_alignParentLeft="true" />
    <EditText
        android:id="@+id/precio_input"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/desPrecioPlato"
        android:inputType="number"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/resumen_input"
        android:layout_alignParentLeft="true" />
    <EditText
        android:id="@+id/cantidad_input"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:hint="@string/desCantidadPlato"
        android:inputType="number"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignTop="@+id/precio_input"
        android:layout_alignRight="@+id/resumen_input"
        android:layout_alignEnd="@+id/resumen_input" />

    <Button
        android:id="@+id/guardar_descrip_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/button_padding"
        android:paddingTop="@dimen/button_padding"
        android:text="Siguiente"
        android:textColor="@android:color/white"
        android:background="@color/md_orange_900"
        android:onClick="btnSiguienteFoto"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button_tipoPlato"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Tipo_plato"
        android:id="@+id/button_tipoPlato"
        android:background="@color/md_orange_300"
        android:layout_below="@+id/precio_input"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:onClick="btnTipoPlato" />



</RelativeLayout>