<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.athome.Login.Registro">
    <!-- Incio_Sesion progress -->
    <ProgressBar android:id="@+id/login_progress2" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button android:id="@+id/sign_in_button_re"
            android:background="@color/md_black_1000_25"
            android:textColor="@color/md_text_white"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/In_sesion"
            android:textStyle="bold"
            android:textSize="13dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="21dp"
            android:nestedScrollingEnabled="false"
            android:onClick="lanzarIniciarSesion" />

        <ScrollView android:id="@+id/login_form2" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="69dp"
            android:fillViewport="false">

            <LinearLayout android:id="@+id/email_login_form2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/md_white_1000_75">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/view">

                        <AutoCompleteTextView
                            android:id="@+id/txtCorreoRegistro" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress" android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/view"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:id="@+id/view2">

                        <EditText android:id="@+id/txtPasswordRegistro" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified" android:inputType="textPassword"
                            android:maxLines="1" android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/view2"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:id="@+id/view3">

                        <EditText android:id="@+id/txtNombreRegistro" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:hint="@string/prompt_name"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified" android:inputType="text"
                            android:maxLines="1" android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/view3"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true">


                    </android.support.design.widget.TextInputLayout>
                </RelativeLayout>

                <Button android:id="@+id/registro_re_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in"
                    android:background="@color/md_deep_orange_400"
                    android:textStyle="bold"
                    android:layout_marginBottom="149dp"
                    android:layout_marginTop="16dp"
                    android:textSize="15dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:onClick="registrarUsuario" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>

